Time: 7 ms (95.63%), Space: 50.2 MB (99.56%) - LeetHub