@@ -1,21 +1,16 @@
-class Solution {
+public class Solution{ 
     public List<List<Integer>> removeInterval(int[][] intervals, int[] toBeRemoved) {
-        List<List<Integer>> res = new ArrayList<>();
-        for(int[] cur : intervals) {
-            if(toBeRemoved == null || cur[1] <= toBeRemoved[0]) {
-                res.add(List.of(cur[0], cur[1])); 
-            } else if(cur[0] >= toBeRemoved[1]) {
-                toBeRemoved = null;
-                res.add(List.of(cur[0], cur[1]));
-            } else {
-                if(cur[0] < toBeRemoved[0]) {
-                    res.add(List.of(cur[0], toBeRemoved[0]));
-                }
-                if(cur[1] > toBeRemoved[1]) {
-                    res.add(List.of(toBeRemoved[1], cur[1]));
-                }
+        List<List<Integer>> ans = new ArrayList<>();
+        for (int[] i : intervals) {
+            if (i[1] <= toBeRemoved[0] || i[0] >= toBeRemoved[1]) {
+                ans.add(Arrays.asList(i[0], i[1]));
+            }else {
+                if(i[0] < toBeRemoved[0])
+                    ans.add(Arrays.asList(i[0], toBeRemoved[0]));
+                if (i[1] > toBeRemoved[1]) 
+                    ans.add(Arrays.asList(toBeRemoved[1], i[1]));
             }
         }
-        return res;
+        return ans;
     }
 }
